DevOCL/src/objects/CLQ_Ratio__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Age_Group_Range__c</fullName>
        <label>Age Group / Range</label>
        <picklist>
            <picklistValues>
                <fullName>0 to &lt; 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months to &lt; 18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months to &lt; 30 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 months to &lt; 36 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years to &lt; 4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 years to &lt; 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years to &lt; Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School-Age to &lt; 11 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Ratio object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_In_Out_of_Compliance__c</fullName>
        <label>In/Out of Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>In Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Ratios</relationshipLabel>
        <relationshipName>Ratios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Children_Under_2__c</fullName>
        <label>No. of Children Under 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Children__c</fullName>
        <label>No. of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Staff__c</fullName>
        <label>No. of Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Children_Allowed__c</fullName>
        <formula>CLQ_Room_Space__r.CLQ_Number_of_Children_Allowed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Children Allowed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space_Location__c</fullName>
        <formula>TEXT(CLQ_Room_Space__r.CLQ_Room_Space_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room/Space Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space_Number__c</fullName>
        <formula>VALUE(CLQ_Room_Space__r.CLQ_Room_Space_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room/Space Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Room_Space__c</fullName>
        <label>Room/Space</label>
        <referenceTo>CLQ_Room_Space__c</referenceTo>
        <relationshipLabel>Ratios</relationshipLabel>
        <relationshipName>Ratios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_Child_Ratio__c</fullName>
        <formula>CLQ_No_of_Staff__c / CLQ_No_of_Children__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff / Child Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_to_Child_Ratio__c</fullName>
        <description>This field will calculate and display the ratio of children to staff in the group information</description>
        <formula>TEXT(CLQ_No_of_Staff__c) + &apos; to &apos; +  TEXT(CLQ_No_of_Children__c)</formula>
        <label>Staff to Child Ratio</label>
        <type>Text</type>
    </fields>
    <label>Ratio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ratio-{000000}</displayFormat>
        <label>Ratio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>